--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,7 +11,7 @@ import NavBar from '../components/NavBar.astro';
 		<meta name="generator" content={Astro.generator} />
 		<title>Bill Tracker</title>
 	</head>
-	<body>
+	<body class="bg-slate-800">
 		<NavBar />
 		<slot />
 	</body>
