--- a/src/components/BillContainer.astro
+++ b/src/components/BillContainer.astro
@@ -1,22 +1,21 @@
 ---
 import "../styles/global.css";
 import Bill from "./Bill.astro";
-import BillData from "../data/Bills.json";
-
+import BillData from "../data/openBills.json";
 ---
 
 <div
-  class="m-5 top-0 left-0 right-0 rounded-lg flex flex-row bg-red-100 shadow-2xl"
+  class="m-5 top-0 left-0 right-0 rounded-lg flex flex-row bg-slate-100 shadow-2xl"
 >
-  <div class="m-3 p-3 top-0 left-0 right-0 rounded-lg grow text-center text-xl">
+  <div class="m-3 p-3 top-0 left-0 right-0 grow text-center text-xl">
     <div class="pb-3">Open Bills</div>
-    <div>
+    <div class="divide-y-2">
       {
       BillData.map(({ isOpen, due, total, person, }) => (
-      <Bill date = {due}, total = {total}, person = {person}/>
+      <Bill due = {due}, total = {total}, person = {person}/>
       ))
       }
-      </div>
+    </div>
   </div>
   <div class="flex flex-col">
     <button
