--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -3,7 +3,7 @@ import "../styles/global.css";
 ---
 
 <nav
-  class="sticky m-5 top-0 left-0 right-0 rounded-lg flex flex-row justify-center justify-items-center bg-slate-100 shadow-2xl text-2xl"
+  class="m-5 top-0 left-0 right-0 rounded-lg flex flex-row justify-center justify-items-center bg-slate-100 shadow-2xl text-2xl"
 >
   <a
     href="/"
