--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,3 +2,14 @@
 .hidden {
   display: none;
 }
+@layer utilities {
+  input[type="number"]::-webkit-inner-spin-button,
+  input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+
+  input[type="number"] {
+    -moz-appearance: textfield;
+  }
+}
